# etl_agent

./: .gitignore  README.md  requirements.txt  try.ipynb
etl_agent/: pyproject.toml
etl_agent/src/etl_agent/: crew.py  main.py
etl_agent/src/etl_agent/config/: agents.yaml  tasks.yaml
etl_agent/src/etl_agent/tools/: __init__.py  bigquery_tool.py  postgresfetch_tool.py  schematransformer_tool.py  schemavalidator_tool.py
