[project]
name = "etl_agent"
version = "0.1.0"
description = "etl-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.4.1"
]

[project.scripts]
etl_agent = "etl_agent.main:run"
run_crew = "etl_agent.main:run"
train = "etl_agent.main:train"
replay = "etl_agent.main:replay"
test = "etl_agent.main:test"
run_with_trigger = "etl_agent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
